--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-hacker
 title: Welcome to hinsonsc's blog!
-description: This is my 362 blog!
+description: Just a blog by a guy who likes to pop shells and maybe sometimes defend stuff
